<?xml version="1.0" encoding="utf-8"?>

<!--
Author: Afahri Kerr (AfahriAKerr91@gmail.com)
Version: 2.0
Date: 12/07/2023
This is the screen layout for the set goal screen.
-->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetGoalScreen">

    <TextView
        android:id="@+id/goal_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/goal"
        android:textSize="50sp"/>

    <TextView
        android:id="@+id/goal_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/goal_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/goal_prompt"
        android:textSize="25sp"/>

    <EditText
        android:id="@+id/goal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/goal_weight"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#827717"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/goal_prompt"
        tools:ignore="Autofill,VisualLintTextFieldSize" />

    <Button
        android:id="@+id/set_goal_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:enabled="true"
        android:text="@string/goal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/goal"
        tools:ignore="DuplicateSpeakableTextCheck,VisualLintButtonSize" />

    <TextView
        android:id="@+id/phone_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_prompt"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/set_goal_button" />

    <EditText
        android:id="@+id/phone_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:minHeight="48dp"
        android:textColorHint="#827717"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phone_prompt"
        tools:ignore="Autofill,VisualLintTextFieldSize" />

    <Button
        android:id="@+id/add_number_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:enabled="true"
        android:text="@string/number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phone_number"
        tools:ignore="VisualLintButtonSize" />

    <TextView
        android:id="@+id/permission_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/permission_prompt"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_number_button" />

    <Button
        android:id="@+id/permission_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:enabled="true"
        android:text="@string/permission"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/permission_prompt"
        tools:ignore="VisualLintButtonSize" />



</androidx.constraintlayout.widget.ConstraintLayout>