<?xml version="1.0" encoding="utf-8"?>

<!--
Author: Afahri Kerr (AfahriAKerr91@gmail.com)
Version: 2.0
Date: 12/07/2023
This is the screen layout for the edit weight screen.
-->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditWeightScreen">

    <TextView
        android:id="@+id/edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_weight"
        android:textSize="50sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/date_prompt"
        android:text="@string/date_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/date"
        android:minHeight="48dp"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/date_prompt"
        tools:ignore="Autofill,TextFields,VisualLintTextFieldSize" />

    <TextView
        android:id="@+id/weight_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weight_prompt"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/date"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/weight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/enter_weight"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/weight_prompt"
        tools:ignore="Autofill,VisualLintTextFieldSize" />

    <Button
        android:id="@+id/edit_weight_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:enabled="true"
        android:text="@string/edit_weight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/weight"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/or_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@id/edit_weight_button"
        app:layout_constraintTop_toBottomOf="@id/weight"
        app:layout_constraintEnd_toStartOf="@id/delete_weight_button"/>

    <Button
        android:id="@+id/delete_weight_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:enabled="true"
        android:text="@string/delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/weight" />

</androidx.constraintlayout.widget.ConstraintLayout>